<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:context="com.example.devssociety.screens.profile.ProfileFragment">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:background="@color/colorPrimary"
                android:elevation="4dp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/profile_image"
                    android:layout_width="135dp"
                    android:layout_height="135dp"
                    android:layout_marginTop="8dp"
                    android:src="@drawable/omer"
                    app:civ_border_color="#ffffff"
                    app:civ_border_width="2dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/user_name_pro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="#ffffff"
                    android:textSize="30sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.498"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/profile_image"
                    tools:text="@string/username_String" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="32dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:fontFamily="sans-serif-light"
                    android:text="Android Developer"
                    android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                    android:textColor="#ffffff"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.497"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/user_name_pro" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textView2"
                    style="@style/text_name_profile_style"
                    android:text="@string/posts_string"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/post_numer"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="@+id/post_numer"
                    app:layout_constraintTop_toBottomOf="@+id/post_numer"
                    app:layout_constraintVertical_bias="1.0" />

                <TextView
                    android:id="@+id/post_numer"
                    style="@style/number_text_profile_style"
                    android:layout_marginTop="4dp"
                    android:text="213"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/followings"
                    style="@style/number_text_profile_style"
                    android:layout_marginTop="4dp"
                    android:text="32"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@android:drawable/ic_menu_slideshow" />

                <TextView
                    android:id="@+id/followingText"
                    android:text="@string/followings_text_string"
                    style="@style/text_name_profile_style"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/followings"
                    app:layout_constraintStart_toStartOf="@+id/followings"
                    app:layout_constraintTop_toBottomOf="@+id/followings" />

                <TextView
                    android:id="@+id/follower"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="16dp"
                    style="@style/number_text_profile_style"
                    android:text="94"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Twitter"
                    style="@style/text_name_profile_style"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/follower" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" />


        </LinearLayout>


    </ScrollView>
</layout>